# openapi.json
@@ -35,21 +35,89 @@
             "application/json": {
               "schema": {
                 "properties": {
-                  "submissionId": {
-                    "type": "string",
-                    "default": "0x0000000000000000000000000000000000000000"
-                  },
                   "signature": {
                     "type": "string",
                     "default": "0x0000000000000000000000000000000000000000000000000000000000000000"
                   },
-                  "digest": {
-                    "type": "string",
-                    "default": "0x0000000000000000000000000000000000000000"
-                  },
-                  "expirationTimestamps": {
-                    "type": "number",
-                    "default": 1234648641
+                  "msgData": {
+                    "type": "object",
+                    "properties": {
+                      "domain": {
+                        "type": "object",
+                        "properties": {
+                          "chainId": {
+                            "type": "number",
+                            "default": 1
+                          },
+                          "name": {
+                            "type": "string",
+                            "default": "Proof of Humanity"
+                          },
+                          "verifyingContract": {
+                            "type":"string",
+                            "default": "0x0000000000000000000000000000000000000000"
+                          },
+                          "version": {
+                            "type": "string",
+                            "default": "1"
+                          }
+                        }
+                      },
+                      "message": {
+                        "type": "object",
+                        "properties": {
+                          "vouchedSubmission": {
+                            "type": "string",
+                            "default": "0x0000000000000000000000000000000000000000"
+                          },
+                          "voucherExpirationTimestamp": {
+                            "type": "number",
+                            "default": 1315536000
+                          }
+                        }
+                      },
+                      "primaryType": {
+                        "type": "string",
+                        "default": "IsHumanVoucher"
+                      },
+                      "types": {
+                        "type": "object",
+                        "properties": {
+                          "EIP712Domain": {
+                            "type":"array",
+                            "items": {
+                              "type": "object",
+                              "properties": {
+                                "name": {
+                                  "type": "string",
+                                  "default": "name"
+                                },
+                                "type": {
+                                  "type": "string",
+                                  "default": "string"
+                                }
+                              }
+                            }
+                          },
+                          "IsHumanVoucher": {
+                            "type":"array",
+                            "items": {
+                              "type": "object",
+                              "properties": {
+                                "name": {
+                                  "type": "string",
+                                  "default": "name"
+                                },
+                                "type": {
+                                  "type": "string",
+                                  "default": "string"
+                                }
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
                   }
                 }
               }
